#673 post plan item
